@@ -18,6 +18,7 @@
     CLI added -r, --reuse-tab  Open folder in current tab of last used window
     corrected non-translatable strings pulls #100 fixes #88
     new french translation
+    no cancel sel on desktop right-click in single-click mode fixes #76
 0.7.7   2012-05-27:
     escape mount point in dev props scripts fixes #70
     fixed File|File Search keybinding
